# cold_clear_ai_love2d_wrapper

./: .gitignore  .gitmodules  Android.mk  Application.mk  CCloader.sln  CCloader.vcxproj  CMakeLists.txt  MacReleaseIOS.sh  Makefile  README.md  Readme.md  cc.lua  cold_clear_wrapper.c
.github/workflows/: build.yml  test.yml
include/: coldclear.h
x86/: Readme.txt
